
* SOLR-16933: Include the full query response when using the API tool, and fix serialization issues for SolrDocumentList. (Houston Putman)

* SOLR-16916: Use of the JSON Query DSL should ignore the defType parameter
  (Christina Chortaria, Max Kadel, Ryan Laddusaw, Jane Sandberg, David Smiley)

Dependency Upgrades
---------------------

* PR#1846: Update io.opentelemetry to 1.29.0 (Alex Deparvu)

Other Changes
---------------------

* SOLR-16842: Eliminate special case code in Solr CLI by introducing explicit VersionTool.java.  (Eric Pugh, Will White)

* SOLR-16856: The default auto-soft-commit time has been set to 3 seconds. Previously, auto-soft-commit was disabled by default. (Houston Putman)

* PR#1629: Fix typos in org.apache.solr.core package (Andrey Bozhko, Marcus Eagan)

* SOLR-16803: Remove dependencies on methods defined in the SimplePostTool from Solr core and solrj modules.

* SOLR-16915: Lower the AffinityPlacementPlugin's default minimalFreeDiskGB to 5 GB (Houston Putman)

* SOLR-16623: new SolrJettyTestRule for tests needing HTTP or Jetty. (David Smiley, Joshua Ouma)

==================  9.3.0 ==================

Upgrade Notes
---------------------

* SOLR-13396: Add property to control the deletion of unknown cores.  The default setting is to not delete unknown cores.
  This is a change to behaviour introduced in Solr 7.3.1 by SOLR-12066. To continue using the previous behaviour, Solr can be
  started with the system property `solr.deleteUnknownCores` set to `true`. (Colvin Cowie, janhoy)

New Features
---------------------
* SOLR-16697: Solr now provides an "Install Shard"  API that allows users who have built (per-shard) indices offline to import
  them into SolrCloud shards.  The API is available at `POST /api/collections/collName/shards/shardName/install`
  (v2), or at `GET /solr/admin/collections?action=INSTALLSHARDDATA` (v1). (Jason Gerlowski)
